integrated environment to allow multiple configurations
